covid tracker app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   <span>Welcome</span>
   <button mat-raised-button routerLink="/map">Map</button>
   <button mat-raised-button routerLink="/graph">Graph</button>
+  <button mat-raised-button routerLink="/tracker">Covid Tracker</button>
 </div>
 
 <router-outlet></router-outlet>
